# ledgerscript-python

./: .gitignore  pyproject.toml
examples/: report.md
src/ledgerscript/: cli.py  compilation.py  definition.py  errors.py  parsing.py  string_processing.py
