[project]
name = "ledgerscript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[project.scripts]
ledgerscript="ledgerscript.cli:ledgerscript_cli"